# bigeyelite

./: CMakeLists.txt  README.md
gui/: CMakeLists.txt  Home.qml  LabelSpinBox.qml  LabelTextField.qml  Page1.qml  Page2.qml  main.qml  qml.qrc  qtquickcontrols2.conf
src/: CMakeLists.txt  abstracttest.cpp  abstracttest.h  autoonofftest.cpp  autoonofftest.h  bigeye.cpp  bigeye.h  bigeyelinker.cpp  bigeyelinker.h  bigeyelite.cpp  bigeyelite.h  logmodel.cpp  logmodel.h  main.cpp  quickpresstest.cpp  quickpresstest.h  simpleonofftest.cpp  simpleonofftest.h
